--- a/Portfolio.html
+++ b/Portfolio.html
@@ -75,7 +75,7 @@
             <div class="media-container">
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">Портфолио выполненных заказов</h1>
-                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-2"></p><p>&nbsp;Подборка фотографий наших прошлых работ</p><p></p>
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-2">Подборка фотографий наших прошлых работ</p>
                     <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-primary display-4" href="Portfolio.html#form4-3c">Подробней</a></div>
 
                     <div class="icons-media-container mbr-white">
